added styling adjustments and made mobile friendly

--- a/lets-make-it-chef/views/myList.ejs
+++ b/lets-make-it-chef/views/myList.ejs
@@ -36,20 +36,18 @@
         </nav>
     </header>
     <div class="pushIt">
-        <h1 class="black-title centering">My Shopping List</h1>
+        <h1 class="black-title centering">Shopping List</h1>
         <!-- add for each loop looping through your list -->
     
-        <h2 class="red-title centering">Add Items</h2>
         <div class="container">
             <form action="" method="POST"></form>
                 <div id="formfield">
                     <input type="text" placeholder="Item">
                     
                 </div>
-                <div class="button-center">
-                    <button type="submit" class='del black-hov button-dist item-button'>Add Item</button>
-                </div>
-                
+                <div class="button-center addButton">
+                    <input type="submit" value="Add">
+                </div>             
             </form>
         </div>
     </div>
