--- a/lets-make-it-chef/public/css/style.css
+++ b/lets-make-it-chef/public/css/style.css
@@ -244,13 +244,13 @@ input[type="Submit"]:hover{
     align-items: center;
 }
 
-.new-rec {
+/* .new-rec {
     background-color: rgb(231, 231, 231);
     box-shadow: 4px 4px 2px rgb(150,150,150);
     border: 1px solid black;
     border-radius: 4px;
     padding: 10px 10px 10px 10px;
-}
+} */
 
 .recipeItem {
     display: flex;
@@ -384,11 +384,111 @@ input[type="Submit"]:hover{
 }
 
 .picture {
-    height: auto;
-    width: 600px;
+    /* height: auto;
+    width: 600px; */
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     border: 2px solid grey;
     border-radius: 4px;
-    margin-bottom: 2%;
-    margin-top: 1%;
+    margin-bottom: 2%
+    /*margin-top: 1%; */
 }
 
+.alert {
+    text-align: center;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.new-rec {
+    /* margin: 10px auto; */
+    display: block;
+    width: 40%;
+    height: 40px;
+    border: 1px solid;
+    border-radius: 25px;
+    font-size: 18px;
+    cursor: pointer;
+    background: rgb(238, 238, 238);
+}
+
+.new-rec-dir {
+    color: black;
+    display: block;
+    text-align: center;
+    align-items: center;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 5px auto;
+    
+}
+
+.new-rec:hover {
+    background: red;
+    color: #e9f4fb;
+    transition: .5s;
+}
+
+.new-rec-dir:hover {
+    color: white;   
+}
+
+.welcomeTitle {
+    margin-top: 6%;
+    margin-bottom: 6%;
+}
+
+
+.recTitle {
+    /* font-size: 2em; */
+    /* font-family: 'Homemade Apple', Georgia, 'Times New Roman', Times, serif; */
+    margin: 6% 0 6% 3%;
+
+    width: 100%; 
+    text-align: center; 
+    border-bottom: 1px solid red; 
+    line-height: 0.1em;
+    margin: 10px 0 20px 0; 
+    margin-top: 8%;
+    margin-bottom: 4%;
+}
+
+.recTitle span {
+    background: white; 
+    padding:0 10px; 
+}
+
+
+@media (max-width: 600px){
+    .recTitle {
+        font-size: 2.5em;
+    }
+
+    .picture {
+        width: 300px;
+    }
+    .welcomeTitle {
+        font-size: 3.5em;
+    }
+
+    .new-rec {
+        margin-bottom: 5%;
+    }
+
+    h3 .ingreTitle {
+        margin-bottom: 8%;
+    }
+}
+
+.addButton {
+    margin-top: 5%;
+}
+
+ol li {
+    padding-right: 3%;
+}
+
+/* .ingreTitle {
+    margin-bottom: 4%;
+} */
