--- a/lets-make-it-chef/views/myRecipes.ejs
+++ b/lets-make-it-chef/views/myRecipes.ejs
@@ -39,14 +39,14 @@
     <div class="welcome-back pushIt">
         <h1 class="welcomeTitle black-title centering">Welcome Back! <%= info.userName %></h1>
         <!-- compare to social media page on how to have the users above pull in properly by looking at controller as well -->
-        <p class="new-rec">To create a new recipe, click <a href="/add-recipe" class="click-here">here</a>!</p>
-        <h2 class="red-title">My Recipes:</h2>
+        <span class="new-rec"><a href="/add-recipe" class="new-rec-dir" >Add Recipe</a></span>
+        <h2 class="red-title recTitle"><span>My Recipes:</span></h2>
         <ul>
         <% recipes.forEach( el => { %>
                 <li class='recipeItem' data-id='<%=el.id%>'>
                     <span class="mainTitle centering"><%= el.title %></span>
                     <img class="img-fluid picture" src="<%= el.image%>" />
-                    <h3 class="aTitle"><span>Ingredients:</span></h3>
+                    <h3 class="aTitle ingreTitle"><span>Ingredients:</span></h3>
                     <% for(var i=0; i<el.ingredient.length; i++) {%>
                         <span class="ingredientItem">- <%= el.ingredient[i] %></span>
                     <% } %>
@@ -64,7 +64,7 @@
                     class="col-3"
                   >
                   <div class="buttonCenter">
-                    <button type="submit" class='del black-hov button-dist'>Delete</button>
+                    <input type="submit" value="Delete">
                   </div>
                     
                   </form>
