--- a/lets-make-it-chef/public/css/style.css
+++ b/lets-make-it-chef/public/css/style.css
@@ -492,3 +492,12 @@ ol li {
 /* .ingreTitle {
     margin-bottom: 4%;
 } */
+
+.ourRec {
+    margin-bottom: 5%;
+    
+}
+
+.extraSpace {
+    margin-bottom: 2%;
+}
