--- a/lets-make-it-chef/public/css/style.css
+++ b/lets-make-it-chef/public/css/style.css
@@ -501,3 +501,12 @@ ol li {
 .extraSpace {
     margin-bottom: 2%;
 }
+
+.completed {
+    text-decoration: line-through;
+    color: grey
+}
+
+.not{
+    text-decoration: underline;
+}
