--- a/lets-make-it-chef/public/css/style.css
+++ b/lets-make-it-chef/public/css/style.css
@@ -306,7 +306,8 @@ input[type="Submit"]:hover{
 }
 
 .pushIt {
-    margin: 0 20%;
+    margin: 0 4%;
+    /* width: 550px; */
 }
 
 @media (max-width: 500px){
@@ -385,7 +386,7 @@ input[type="Submit"]:hover{
 
 .picture {
     /* height: auto;
-    width: 600px; */
+    width: 300px; */
     margin-left: auto;
     margin-right: auto;
     width: 50%;
@@ -508,5 +509,31 @@ ol li {
 }
 
 .not{
-    text-decoration: underline;
+    font-size: 2em;
+}
+
+.organize {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.listButton {
+    width: 100%;
+    height: 100%;
+}
+
+input[class="submitButton"] {
+    width: 100%;
+    border-radius: 50%;
+    height: 30px;
+}
+
+/* .recipePage {
+    width: 500px;
+} */
+
+
+.listSpace {
+    margin-top: 0%;
 }
