--- a/lets-make-it-chef/views/recipes.ejs
+++ b/lets-make-it-chef/views/recipes.ejs
@@ -37,26 +37,29 @@
     </header>
 
     <div class="welcome-back pushIt">
-        <h2 class="centering red-title show-shadow recTitle ourRec"><span>Our Recipes:</span></h2>
-        <% allRecipes.forEach( el => { %>
-            <li class='recipeItem' data-id='<%=el._id%>'>
-                <span class="mainTitle centering"><%= el.title %></span>
-                <img class="img-fluid picture" src="<%= el.image%>" />
-                <h3 class="aTitle ingreTitle"><span>Ingredients:</span></h3>
-                <% for(var i=0; i<el.ingredient.length; i++) {%>
-                    <span class="ingredientItem">- <%= el.ingredient[i] %></span>
-                <% } %>
-                <!-- <span class="aTitle">Amount:</span>
-                <span><%= el.amount %></span> -->
-                <h3 class="aTitle"><span>Instructions:</span></h3>
-                <ol>
-                    <% for(var i=0; i<el.instructions.length; i++) {%>
-                        <li> <%= el.instructions[i] %></li>
+        <h2 class="centering red-title show-shadow recTitle ourRec recipePage"><span>Our Recipes:</span></h2>
+        <div>
+            <% allRecipes.forEach( el => { %>
+                <li class='recipeItem' data-id='<%=el._id%>'>
+                    <span class="mainTitle centering"><%= el.title %></span>
+                    <img class="img-fluid picture" src="<%= el.image%>" />
+                    <h3 class="aTitle ingreTitle"><span>Ingredients:</span></h3>
+                    <% for(var i=0; i<el.ingredient.length; i++) {%>
+                        <span class="ingredientItem">- <%= el.ingredient[i] %></span>
                     <% } %>
-                </ol>
-            </li>
-            <hr class="text-muted">
-    <% }) %>   
+                    <!-- <span class="aTitle">Amount:</span>
+                    <span><%= el.amount %></span> -->
+                    <h3 class="aTitle"><span>Instructions:</span></h3>
+                    <ol class="listSpace">
+                        <% for(var i=0; i<el.instructions.length; i++) {%>
+                            <li> <%= el.instructions[i] %></li>
+                        <% } %>
+                    </ol>
+                </li>
+                <br>
+        <% }) %>   
+        </div>
+      
     </div> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
