--- a/lets-make-it-chef/public/css/style.css
+++ b/lets-make-it-chef/public/css/style.css
@@ -256,8 +256,9 @@ input[type="Submit"]:hover{
     display: flex;
     flex-direction: column;
     /* align-items: center; */
-    background-color: rgb(231, 231, 231);
-    box-shadow: 4px 4px 2px rgb(150, 150, 150);
+    /* background-color: rgb(231, 231, 231); */
+    background-color: rgb(247, 247, 247);;
+    box-shadow: 2px 2px 1px rgb(0, 0, 0);
     border: 1px solid black;
     border-radius: 4px;
     padding: 10px 10px 10px 10px;
@@ -290,7 +291,7 @@ input[type="Submit"]:hover{
 }
 
 .aTitle span {
-    background: rgb(231, 231, 231); 
+    background: rgb(247, 247, 247);
     padding:0 10px; 
 }
 .mainTitle {
@@ -536,4 +537,16 @@ input[class="submitButton"] {
 
 .listSpace {
     margin-top: 0%;
+}
+
+.fabutton {
+    background: none;
+    padding: 0px;
+    border: none;
+  }
+
+.insideDiv {
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
 }
