--- a/lets-make-it-chef/views/myList.ejs
+++ b/lets-make-it-chef/views/myList.ejs
@@ -55,7 +55,7 @@
             <% items.forEach( el => { %>
                 <li class='todoItem' data-id='<%=el._id%>'>
                     <div class="organize">
-                        <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.item %></span>
+                        <span class='listItem'><%= el.item %></span>
                         <div class="insideDiv">
                             <div></div>
                             <div>
