--- a/lets-make-it-chef/views/recipes.ejs
+++ b/lets-make-it-chef/views/recipes.ejs
@@ -38,7 +38,7 @@
 
     <div class="welcome-back pushIt">
         <h2 class="centering red-title show-shadow recTitle ourRec recipePage"><span>Our Recipes:</span></h2>
-        <div>
+        <div class="spacingRec">
             <% allRecipes.forEach( el => { %>
                 <li class='recipeItem' data-id='<%=el._id%>'>
                     <span class="mainTitle centering"><%= el.title %></span>
