--- a/lets-make-it-chef/views/index.ejs
+++ b/lets-make-it-chef/views/index.ejs
@@ -58,7 +58,7 @@
     <footer>
         <section></section>
         <section>
-            <p>For all questions and inquiries, please email us at <a href="" class="email-bottom">sampleemail@gmail.com</a> and we will respond to you within 24-48 hours.</p>
+            <p>For all questions and inquiries, please email us at <a href="" class="email-bottom">letsmakeitchefsupport@gmail.com</a> and we will respond to you within 24-48 hours.</p>
         </section>
         <section></section>
     </footer>
