fixing spelling mistakes

--- a/lets-make-it-chef/views/index.ejs
+++ b/lets-make-it-chef/views/index.ejs
@@ -47,7 +47,7 @@
     </header>
     <section class="about-section" id="about">
         <h2>About Us</h2>
-        <p class="first-about-line">After looking at countless recipes online, Brooke (the creater of "Let's Make It, Chef") would usually jot down the ingredients she needed on a piece of paper to bring to the grocery store. Far too often, her list would magically dissapear leaving her to figure out on the spot what ingredients she needed. With the help of "Let's Make It, Chef", Brooke and other users were able to browse different recipes, add the ingridents they needed to an online list, and be able to view that list to print as many times as needed or to even look at on their phone in the store!</p>
+        <p class="first-about-line">After looking at countless recipes online, Meghan (the creator of "Let's Make It, Chef") would usually jot down the ingredients she needed on a piece of paper to bring to the grocery store. Far too often, her list would magically disappear leaving her to figure out on the spot what ingredients she needed. With the help of "Let's Make It, Chef", Meghan and other users were able to browse different recipes, add the ingredients they needed to an online list, and be able to view that list to print as many times as needed or to even look at on their phone in the store!</p>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
