adjusting css to make mobile application more appealing

--- a/ramen-restaurant-page/landing-page/src/App.css
+++ b/ramen-restaurant-page/landing-page/src/App.css
@@ -422,7 +422,11 @@ nav {
 }
 @media (max-width: 600px) {
   .home-bannerImage-container,
+  .about-background,
   .about-background-image-container {
     display: none;
+  }
+  .footer-wrapper{
+    align-items: center;
   }
 }
