--- a/ramen-restaurant-page/landing-page/src/App.css
+++ b/ramen-restaurant-page/landing-page/src/App.css
@@ -430,3 +430,22 @@ nav {
     align-items: center;
   }
 }
+
+.ramenImage {
+  width: 500px;
+  height: 400px;
+  border: 4px solid  #fe9e0d;
+  border-radius: 3px;
+}
+
+.ramenButtons {
+  display: flex;
+  align-content: center;
+  text-align: center;
+}
+
+.prev, .next {
+  margin: 0 30px;
+  margin-top: 180px;
+  cursor: pointer;
+}
