--- a/ramen-restaurant-page/landing-page/src/App.css
+++ b/ramen-restaurant-page/landing-page/src/App.css
@@ -429,6 +429,21 @@ nav {
   .footer-wrapper{
     align-items: center;
   }
+  #ramenButtonsMobile {
+    flex-direction: column;
+  }
+  #ramenImageMobile {
+    height: 250px;
+    width: 310px;
+    margin-top: 0px;
+  }
+
+  h3.next {
+    margin-top: 0px;
+  }
+  h3.prev {
+    margin-top: 40px;
+  }
 }
 
 .ramenImage {
@@ -436,6 +451,7 @@ nav {
   height: 400px;
   border: 4px solid  #fe9e0d;
   border-radius: 3px;
+  margin-top: 40px;
 }
 
 .ramenButtons {
